page main - changes and new features

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -29,7 +29,7 @@
                                 </a>
                             </li>
                             <li class="list__item">
-                                <a href="#" class="header__link">
+                                <a href="/pages/pets/pets.html" class="header__link">
                                     Our pets
                                 </a>
                             </li>
@@ -75,6 +75,196 @@
             </div> 
         </section>
         <! Section info ends>
+        <! Section about starts>
+        <section class="about__pets">
+            <div class="wrapper">
+                <div class="section__start-about">
+                    <div class="about__picture">
+                        <img src="/assets/images/about-pets.png" alt="about__picture">
+                    </div>
+                    <div class="about__text-content">
+                        <div class="about__title">
+                            <h3>About the shelter<br> “Cozy House”</h3>
+                        </div>
+                        <div class="about__under-tittle">
+                            <a class="paragraph-l">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</a>
+                        </div>
+                        <div class="about__under-tittle">
+                            <a class="paragraph-l">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <! Section about ends>
+        <! Section our-pets starts TODO: Border-radius for pics>
+        <section class="our__pets">
+            <div class="wrapper">
+                <div class="our__pets-starting">
+                    <div class="our__pets-heading">
+                        <h3>Our friends who <br>
+                            are looking for a house</h3>
+                    </div>
+                    <div class="our__pets-grid">
+                        <div class="button__in-grid">
+                            <button class="pink_slider-button">
+                                <
+                            </button>
+                        </div>
+                        <div class="our__pets-card">
+                            <div class="card__set">
+                                <div>
+                                    <img calss="pic__card" src="/assets/images/katrine.png" alt="Katrine">
+                                </div>
+                                <div class="title__card">
+                                    <a class="button_text">Katrine</a>
+                                </div>
+                                <div class="card__button">
+                                    <a href="#">
+                                        <button class="white_button">
+                                            <a class="button_text">Learn more</a>
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="our__pets-card">
+                            <div class="card__set">
+                                <div>
+                                    <img calss="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
+                                </div>
+                                <div class="title__card">
+                                    <a class="button_text">Jennifer</a>
+                                </div>
+                                <div class="card__button">
+                                    <a href="#">
+                                        <button class="white_button">
+                                            <a class="button_text">Learn more</a>
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="our__pets-card">
+                            <div class="card__set">
+                                <div>
+                                    <img calss="pic__card" src="/assets/images/woody.png" alt="Woody">
+                                </div>
+                                <div class="title__card">
+                                    <a class="button_text">Woody</a>
+                                </div>
+                                <div class="card__button">
+                                    <a href="#">
+                                        <button class="white_button">
+                                            <a class="button_text">Learn more</a>
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="button__in-grid">
+                            <button class="pink_slider-button">
+                                >
+                            </button>
+                        </div>
+                    </div>
+                    <div class="our__pets-ending">
+                        <a href="#">
+                            <button class="pink_button">
+                                <a class="button_text">Get to know the rest</a>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <! Section our-pets ends>
+        <! Section how-you-can-help starts>
+        <section class="help__us">
+            <div class="wrapper">
+                <div class="help__us-starting">
+                    <div class="help__us-heading">
+                        <h3>How you can help<br>
+                            our shelter</h3>
+                    </div>
+                    <div class="help__us-grid">
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-pet-food.svg" alt="Pet food" class="list__help-us-pic">
+                            <h4>Pet food</h4>
+                        </div>
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-transportation.svg" alt="Transportation" class="list__help-us-pic">
+                            <h4>Transportation</h4>
+                        </div>
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-toys.svg" alt="Toys" class="list__help-us-pic">
+                            <h4>Toys</h4>
+                        </div>
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-bowls-and-cups.svg" alt="Bowls and cups" class="list__help-us-pic">
+                            <h4>Bowls and cups</h4>
+                        </div>
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-shampoos.svg" alt="Shampoos" class="list__help-us-pic">
+                            <h4>Shampoos</h4>
+                        </div>
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-vitamins.svg" alt="Vitamins" class="list__help-us-pic">
+                            <h4>Vitamins</h4>
+                        </div>
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-medicines.svg" alt="Medicines" class="list__help-us-pic">
+                            <h4>Medicines</h4>
+                        </div>
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-collars-leashes.svg" alt="Collars / leashes" class="list__help-us-pic">
+                            <h4>Collars / leashes</h4>
+                        </div>
+                        <div class="help__us-grid-item">
+                            <img src="/assets/icons/icon-sleeping-area.svg" alt="Sleeping areas" class="list__help-us-pic">
+                            <h4>Sleeping areas</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <! Section how-you-can-help ends>
+        <! Section donation starts>
+        <section class="donation">
+            <div class="wrapper">
+                <section class="donation__starting">
+                    <div class="donation__pic">
+                        <img src="/assets/images/donation-dog.png" alt="donation-dog">
+                    </div>
+                    <div class="donation__text-content">
+                        <div class="donation__heading">
+                            <h3>You can also<br> make a donation</h3>
+                        </div>
+                        <div class="donation__heading-under">
+                            <h5>Name of the bank / Type off account</h5>
+                        </div>
+                        <div class="credit__card-donation">
+                            <a href="#">
+                                <button class="pink_button-credit">
+                                    <a class="button_text"><img class="button-pic_donation" src="/assets/icons/credit-card.svg" alt="credit-card">3380 2880 8791 7435</a>
+                                </button>
+                            </a>
+                        </div>
+                        <div class="donation__subtext">
+                            <p class="paragraph-s">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </section>
+        <! Section donation ends>
+        <! Section footer starts TODO:>
+        <footer class="footer">
+            <div class="wrapper">
+                123
+            </div>
+        </footer>
+        <! Section footer ends>
     </main>
 </body>
 </html>
