finished first page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -258,10 +258,32 @@
             </div>
         </section>
         <! Section donation ends>
-        <! Section footer starts TODO:>
+        <! Section footer starts>
         <footer class="footer">
             <div class="wrapper">
-                123
+                <div class="footer__content">
+                    <div class="footter_questions">
+                        <h3 class="footer__questions-title">For questions <br> and suggestions</h3>
+                        <div class="footer__sub-menu">
+                            <a href= "mailto:email@shelter.com" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-email.svg" alt="email-footer">email@shelter.com</a>
+                        </div>
+                        <div class="footer__sub-menu">
+                            <a href= "tel:+136745677554" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-phone.svg" alt="phone-footer">+13 674 567 75 54</a>
+                        </div>
+                    </div>
+                    <div class="footer__visit">
+                        <h3 class="footer__questions-title">We are waiting <br> for your visit</h3>
+                        <div class="footer__sub-menu">
+                            <a  href="https://www.google.com/maps/search/?api=1&query=1 Central Street, Boston" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-marker.svg" alt="marker-one-footer">1 Central Street, Boston</a>
+                        </div>
+                        <div class="footer__sub-menu">
+                            <a href="https://www.google.com/maps/search/?api=1&query=18 South Park, London" class="sub__menu-footer-text"><img class="footer-icon" src="/assets/icons/icon-marker.svg" alt="marker-two-footer">18 South Park, London</a>
+                        </div>
+                    </div>
+                    <div class="footer__pic">
+                        <img src="/assets/images/footer-puppy.png" alt="footer-puppy">
+                    </div>
+                </div>
             </div>
         </footer>
         <! Section footer ends>
