initialized second page - our pets

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/assets/precet.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="main.js">
-    <title>Main</title>
+    <title>Shelter</title>
 </head>
 <body>
     <main class="main">
