finished ourpets page

--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -48,10 +48,157 @@
             </div>
         </header>
         <! Section Header ends>
-        <! Section Pets starts TODO:>
+        <! Section Pets starts>
         <section class="our__pets">
             <div class="wrapper">
-                jqjqjqjq
+                <div class="our__pets-title">
+                    <h3>Our friends who <br> are looking for a house</h3>
+                </div>
+                <div class="our__pets-grid">
+                    <div class="our__pets-card">
+                        <div class="card__set">
+                            <div>
+                                <img class="pic__card" src="/assets/images/katrine.png" alt="Katrine">
+                            </div>
+                            <div class="title__card">
+                                <a class="button_text">Katrine</a>
+                            </div>
+                            <div class="card__button">
+                                <a href="#">
+                                    <button class="white_button">
+                                        <a class="button_text">Learn more</a>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="our__pets-card">
+                        <div class="card__set">
+                            <div>
+                                <img class="pic__card" src="/assets/images/charly.png" alt="charly">
+                            </div>
+                            <div class="title__card">
+                                <a class="button_text">Сharly</a>
+                            </div>
+                            <div class="card__button">
+                                <a href="#">
+                                    <button class="white_button">
+                                        <a class="button_text">Learn more</a>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="our__pets-card">
+                        <div class="card__set">
+                            <div>
+                                <img class="pic__card" src="/assets/images/freddie.png" alt="Freddie">
+                            </div>
+                            <div class="title__card">
+                                <a class="button_text">Freddie</a>
+                            </div>
+                            <div class="card__button">
+                                <a href="#">
+                                    <button class="white_button">
+                                        <a class="button_text">Learn more</a>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="our__pets-card">
+                        <div class="card__set">
+                            <div>
+                                <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
+                            </div>
+                            <div class="title__card">
+                                <a class="button_text">Jennifer</a>
+                            </div>
+                            <div class="card__button">
+                                <a href="#">
+                                    <button class="white_button">
+                                        <a class="button_text">Learn more</a>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="our__pets-card">
+                        <div class="card__set">
+                            <div>
+                                <img class="pic__card" src="/assets/images/scarlett.png" alt="Scarlett">
+                            </div>
+                            <div class="title__card">
+                                <a class="button_text">Scarlett</a>
+                            </div>
+                            <div class="card__button">
+                                <a href="#">
+                                    <button class="white_button">
+                                        <a class="button_text">Learn more</a>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="our__pets-card">
+                        <div class="card__set">
+                            <div>
+                                <img class="pic__card" src="/assets/images/sophia.png" alt="Sophia">
+                            </div>
+                            <div class="title__card">
+                                <a class="button_text">Sophia</a>
+                            </div>
+                            <div class="card__button">
+                                <a href="#">
+                                    <button class="white_button">
+                                        <a class="button_text">Learn more</a>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="our__pets-card">
+                        <div class="card__set">
+                            <div>
+                                <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
+                            </div>
+                            <div class="title__card">
+                                <a class="button_text">Jennifer</a>
+                            </div>
+                            <div class="card__button">
+                                <a href="#">
+                                    <button class="white_button">
+                                        <a class="button_text">Learn more</a>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="our__pets-card">
+                        <div class="card__set">
+                            <div>
+                                <img class="pic__card" src="/assets/images/woody.png" alt="Woody">
+                            </div>
+                            <div class="title__card">
+                                <a class="button_text">Woody</a>
+                            </div>
+                            <div class="card__button">
+                                <a href="#">
+                                    <button class="white_button">
+                                        <a class="button_text">Learn more</a>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="our__pets-controls">
+                    <a class="pink_slider-button-disabled">&lt;&lt;</a>
+                    <a class="pink_slider-button-disabled">&lt;</a>
+                    <a href="#" class="pink_slider-button-active">1</a>
+                    <a href="#" class="pink_slider-button">&gt;</a>
+                    <a href="#" class="pink_slider-button">&gt;&gt;</a>
+                </div>
             </div>
         </section>
         <! Section Pets ends>
