responsive layout 768-1200px

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="/assets/images/start-screen-puppy.png" alt="puppy">
+                        <img class="puppy__main" src="/assets/images/start-screen-puppy.png" alt="puppy">
                     </div>
                 </div>
             </div> 
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="our__pets-card">
+                        <div class="our__pets-card last__pet-card">
                             <div class="card__set">
                                 <div>
                                     <img class="pic__card" src="/assets/images/woody.png" alt="Woody">
