relative layout 320px-767px | main page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -77,7 +77,7 @@
             <div class="wrapper">
                 <div class="section__start-about">
                     <div class="about__picture">
-                        <img src="/assets/images/about-pets.png" alt="about__picture">
+                        <img src="/assets/images/about-pets.png" alt="about__picture" class="about__picture-about">
                     </div>
                     <div class="about__text-content">
                         <div class="about__title">
@@ -125,7 +125,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="our__pets-card">
+                        <div class="our__pets-card last__pet-card-prev">
                             <div class="card__set">
                                 <div>
                                     <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
@@ -229,7 +229,7 @@
             <div class="wrapper">
                 <section class="donation__starting">
                     <div class="donation__pic">
-                        <img src="/assets/images/donation-dog.png" alt="donation-dog">
+                        <img src="/assets/images/donation-dog.png" alt="donation-dog" class="donation__pic-set">
                     </div>
                     <div class="donation__text-content">
                         <div class="donation__heading">
@@ -276,7 +276,7 @@
                         </div>
                     </div>
                     <div class="footer__pic">
-                        <img src="/assets/images/footer-puppy.png" alt="footer-puppy">
+                        <img src="/assets/images/footer-puppy.png" alt="footer-puppy" class="footer__puppy-pic">
                     </div>
                 </div>
             </div>
