responsive layout 768px-1200px | our-pets

--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="our__pets-card">
+                    <div class="our__pets-card pet__card-inactive">
                         <div class="card__set">
                             <div>
                                 <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
@@ -174,7 +174,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="our__pets-card">
+                    <div class="our__pets-card pet__card-inactive">
                         <div class="card__set">
                             <div>
                                 <img class="pic__card" src="/assets/images/woody.png" alt="Woody">
