responsive layout 320px-767px | our-pets

--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main class="main">
-        <! Section Header starts TODO: Padding for bottom>
+        <! Section Header starts>
         <header class="header">
             <div class="wrapper">
                 <div class="header__wraper">
@@ -21,7 +21,7 @@
                         </a>
                     </div>
                     <nav>
-                        <ul class="header__list">
+                        <ul class="header__list ">
                             <li class="list__item">
                                 <a href="/pages/main/index.html" class="header__link">
                                     About the shelter
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="our__pets-card">
+                    <div class="our__pets-card pet__card-inactive-320">
                         <div class="card__set">
                             <div>
                                 <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="our__pets-card">
+                    <div class="our__pets-card pet__card-inactive-320">
                         <div class="card__set">
                             <div>
                                 <img class="pic__card" src="/assets/images/scarlett.png" alt="Scarlett">
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="our__pets-card">
+                    <div class="our__pets-card pet__card-inactive-320">
                         <div class="card__set">
                             <div>
                                 <img class="pic__card" src="/assets/images/sophia.png" alt="Sophia">
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="our__pets-card pet__card-inactive">
+                    <div class="our__pets-card pet__card-inactive pet__card-inactive-320">
                         <div class="card__set">
                             <div>
                                 <img class="pic__card" src="/assets/images/jennifer.png" alt="Jennifer">
@@ -174,7 +174,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="our__pets-card pet__card-inactive">
+                    <div class="our__pets-card pet__card-inactive pet__card-inactive-320">
                         <div class="card__set">
                             <div>
                                 <img class="pic__card" src="/assets/images/woody.png" alt="Woody">
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                     <div class="footer__pic">
-                        <img src="/assets/images/footer-puppy.png" alt="footer-puppy">
+                        <img src="/assets/images/footer-puppy.png" alt="footer-puppy" class="footer__puppy-pic">
                     </div>
                 </div>
             </div>
