--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/precet.css">
-    <link rel="stylesheet" href="/pages/main/main.css">
-    <link rel="stylesheet" href="/pages/main/main.js">
+    <link rel="stylesheet" href="assets/precet.css">
+    <link rel="stylesheet" href="pages/main/main.css">
+    <link rel="stylesheet" href="pages/main/main.js">
     <title>Shelter</title>
 </head>
 <body>
